--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -4,6 +4,8 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 100;
+    border-radius: 5px;
+    background-color: #aaa;
 
     &::backdrop {
         backdrop-filter: blur(2px);
