--- a/src/components/AssideMenu/AsideMenu.module.scss
+++ b/src/components/AssideMenu/AsideMenu.module.scss
@@ -1,7 +1,13 @@
 .aside-menu {
     padding: 15px;
-    width: 200px;
+    min-width: 200px;
     background-color: #ddd;
+    position: relative;
+
+    &__nav-wrapper {
+        position: sticky;
+        top: 100px;
+    }
 
     &__title {
         margin-top: 20px;
