--- a/src/components/Courses/subcomponents/Course.module.scss
+++ b/src/components/Courses/subcomponents/Course.module.scss
@@ -1,5 +1,5 @@
 .course-card {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     padding: 15px 0;
     display: flex;
     flex-direction: column;
@@ -8,7 +8,7 @@
 
     &__title {
         text-align: center;
-        margin-bottom: 10px;
+        margin: 0 10px 10px 10px;
     }
 
     &__image {
