--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,8 +1,9 @@
-.header{
+.header {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
+    z-index: 10;
     display: flex;
     height: 60px;
     background-color: #ddd;
@@ -13,10 +14,9 @@
         width: 60px;
         height: 60px;
         background-color: #438756;
-
     }
 
-    &__title{
+    &__title {
         margin-left: 20px;
         align-self: center;
         flex-grow: 1;
